# Wolf-Controller-API

./: README.md
wolf-app/: Cargo.toml  conf.json  data.json  user.json  users.json  validator.json
wolf-app/src/: app.rs  data.rs  main.rs
wolf-app/src/app/: event.rs  firmware.rs  gpio.rs  net.rs  user.rs  validator.rs
wolf-app/ui/: app.css  dev.html  index.html  lib.css
wolf-app/ui/js/: app.js  bindings.js  litejs.js  load.js  up.js
wolf-app/ui/view/: components.tpl  main.view
